@@ -7,6 +7,7 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.2.4 - ??
+- [new] Add Forgotten Password link in "login error message" as well.
 - [bugfix] Fix a couple of bugs that caused .htaccess support to be broken in "newProject" runs.
 
 Version 0.2.3 - 4/22/2009
